# gnn-pressure-estimation

./: .gitattributes  .gitignore  CITATION.cff  ConfigModels.py  LICENSE  README.md  evaluation.py  pyproject.toml  requirements.txt  scenegenv7.py  train.py
configs/v7.1/: ctown_7v1__EPYNET_config.ini
generator/EPYNET/: ConfigCreator.py  Executorv7.py  TokenGeneratorByRange.py  scenegenv7.py
gnn_pressure_estimation/: ConfigModels.py  GraphModels.py  evaluation.py  scenegenv7.py  train.py
gnn_pressure_estimation/generator/EPYNET/: Executorv7.py  epynet_utils.py
gnn_pressure_estimation/utils/: DataLoader.py  auxil.py
inputs/: ctown.inp
utils/: DataLoader.py  auxil.py  early_stopping.py  gradient_clipping.py  plot_results.ipynb  timer.py
